[package]
name = "pallet-celestia-offchain-worker"
authors = { workspace = true }
edition = "2021"
version = "1.0.0"

[dependencies]
serde = { default-features = false, version = "1.0", features = [ "derive" ] }
log = { workspace = true }
serde_json = { default-features = false, version = "1.0"}

# celestia
nostd-cursor = "0.1.2"
libm = "0.2"
bytes={version =  "1.5.0", default-features = false}
nmt-rs={version = "0.1.0", default-features = false}
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "bbe7de8", default-features = false}
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "bbe7de8" }
sha2 = {version = "0.10.8", default-features = false}
celestia-tendermint = { version = "0.32.1", default-features = false}
celestia-tendermint-proto = "0.32.1"
cid = { version = "0.11", default-features = false }
data-encoding = {version = "2.5.0", default-features = false}

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
pallet-ethereum = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "frame-support/std", "frame-system/std", "parity-scale-codec/std", "scale-info/std", "pallet-ethereum/std"]
try-runtime = ["frame-support/try-runtime"]
